# c-plus-plus

App1/: App1.slnx
App1/App1/: MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest  Person.cs
FactorialLib/: CMakeLists.txt  library.cpp  library.h  test_main.cpp
MathLib/: CMakeLists.txt  library.cpp  test_main.cpp
lab1/: CMakeLists.txt
lab2/: CMakeLists.txt  main.cpp  main2.cpp  main3.cpp
lab3/: CMakeLists.txt  main.cpp  main2.cpp  main3.cpp
pz1/: CMakeLists.txt  app.c  main.c  pz1.docx
pz10/: CMakeLists.txt  main.cpp  pz10.docx
pz11/: CMakeLists.txt  main.cpp
pz13/: CMakeLists.txt  main.cpp
pz14/: CMakeLists.txt  main.cpp
pz15/: CMakeLists.txt  main.cpp
pz15/MathLib/: CMakeLists.txt  library.h
pz16/: CMakeLists.txt  main.cpp
pz18/pz18/: MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest
pz19/pz19/: MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest
pz2/: CMakeLists.txt  main.c  pz2.docx
pz20/: pz20.slnx
pz20/pz20/: App.xaml.cs  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest
pz21/pz21/: MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest
pz22/pz22/: MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest
pz23/: MainPage.xaml  Package.appxmanifest  main.cpp
pz23/pz23/: App.xaml  MainPage.xaml.cs
pz24/: pz24.slnx
pz3/: CMakeLists.txt  main.cpp  pz3.docx
pz4/: CMakeLists.txt  main.cpp  pz4.docx
pz5/: CMakeLists.txt  main.cpp  pz5.docx
pz6/: CMakeLists.txt  main.cpp  pz6.docx
pz7/: CMakeLists.txt  main.cpp  pz7.docx
pz8/: CMakeLists.txt  main.cpp  pz8.docx
pz9/: CMakeLists.txt  main.cpp  pz9.docx
(+19 files in other folders)
